[gd_scene load_steps=17 format=2]

[ext_resource path="res://function/dialogue/dialogue_balloon.gd" type="Script" id=1]
[ext_resource path="res://Asset/Art/character/Eri/Eri_Assets/Sprite_FarmGirl_Ch.png" type="Texture" id=2]
[ext_resource path="res://function/dialogue/ResponsesTemplate.tscn" type="PackedScene" id=3]
[ext_resource path="res://function/dialogue/CharacterSprites.gd" type="Script" id=4]
[ext_resource path="res://Asset/made asset/dialog_UI/Chat_Box.tres" type="Texture" id=5]
[ext_resource path="res://addons/dialogue_manager/example_balloon/font_bold.tres" type="DynamicFont" id=6]
[ext_resource path="res://addons/dialogue_manager/dialogue_label.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/dialogue_manager/example_balloon/Open_Sans/OpenSans-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://addons/dialogue_manager/example_balloon/Open_Sans/OpenSans-Italic.ttf" type="DynamicFontData" id=10]

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("RightPortrait:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LeftPortrait:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=11]
resource_name = "left"
tracks/0/type = "value"
tracks/0/path = NodePath("RightPortrait:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LeftPortrait:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=12]
resource_name = "none"
tracks/0/type = "value"
tracks/0/path = NodePath("RightPortrait:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LeftPortrait:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=13]
resource_name = "right"
tracks/0/type = "value"
tracks/0/path = NodePath("RightPortrait:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LeftPortrait:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="DynamicFont" id=14]
size = 8
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=15]
size = 25
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=16]
size = 6
font_data = ExtResource( 9 )

[node name="Dialogue_V1" type="CanvasLayer"]
pause_mode = 2
layer = 128
script = ExtResource( 1 )

[node name="CharacterSprites" type="Node2D" parent="."]
position = Vector2( 1, -1 )
script = ExtResource( 4 )

[node name="RightPortrait" type="Sprite" parent="CharacterSprites"]
visible = false
position = Vector2( 267, 96.7501 )
scale = Vector2( 2.625, 2.67188 )
texture = ExtResource( 2 )
hframes = 12
frame = 4

[node name="LeftPortrait" type="Sprite" parent="CharacterSprites"]
visible = false
position = Vector2( 53, 96.7501 )
scale = Vector2( 2.625, 2.67188 )
texture = ExtResource( 2 )
hframes = 12
frame = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterSprites"]
anims/RESET = SubResource( 10 )
anims/left = SubResource( 11 )
anims/none = SubResource( 12 )
anims/right = SubResource( 13 )

[node name="Balloon" type="NinePatchRect" parent="."]
margin_top = 109.0
margin_right = 320.0
margin_bottom = 181.0
rect_min_size = Vector2( 320, 72 )
focus_mode = 2
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
patch_margin_left = 25
patch_margin_top = 25
patch_margin_right = 25

[node name="Margin" type="MarginContainer" parent="Balloon"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 1.0
margin_right = 80.0
margin_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 30
custom_constants/margin_top = 5
custom_constants/margin_left = 10
custom_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="Balloon/Margin"]
margin_left = 10.0
margin_top = 5.0
margin_right = 306.0
margin_bottom = 57.0
rect_min_size = Vector2( 174, 47 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 14

[node name="Character" type="Control" parent="Balloon/Margin/VBox"]
margin_right = 296.0

[node name="Text" type="RichTextLabel" parent="Balloon/Margin/VBox/Character"]
modulate = Color( 1, 1, 1, 0.705882 )
margin_right = 174.0
margin_bottom = 13.0
rect_min_size = Vector2( 174, 13 )
mouse_filter = 1
size_flags_horizontal = 3
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 14 )
bbcode_enabled = true
bbcode_text = "Character"
meta_underlined = false
text = "Character"
fit_content_height = true
scroll_active = false

[node name="Dialogue" type="Control" parent="Balloon/Margin/VBox"]
margin_top = 14.0
margin_right = 296.0
margin_bottom = 14.0

[node name="Text" parent="Balloon/Margin/VBox/Dialogue" instance=ExtResource( 7 )]
margin_right = 174.0
margin_bottom = 10.0
rect_clip_content = false
mouse_filter = 1
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/italics_font = SubResource( 15 )
custom_fonts/bold_font = ExtResource( 6 )
custom_fonts/normal_font = SubResource( 16 )
bbcode_text = "This is a bunch of dialogue!"
text = "This is a bunch of dialogue!"

[node name="Responses" type="VBoxContainer" parent="Balloon/Margin/VBox"]
margin_top = 28.0
margin_right = 296.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="ResponsesTemplate" parent="Balloon/Margin/VBox" instance=ExtResource( 3 )]
margin_top = 42.0
margin_right = 296.0
margin_bottom = 52.0
rect_min_size = Vector2( 40, 10 )

[connection signal="gui_input" from="Balloon" to="." method="_on_Balloon_gui_input"]
